--- a/styeels.css
+++ b/styeels.css
@@ -4,7 +4,7 @@ html {
 }
 
 .header{
-    width: 100%;
+    width:100%;
     height: 150px;
     position:sticky;
     top:0px;
@@ -15,11 +15,15 @@ html {
     border-style: solid;
     border-radius: 20px;
     z-index: 1;
+    display: inline-flex;
+  
 
 
 }
 .header-li {
     position: relative;
+    top: 40px;
+    left: -240px;
     margin: 10px;
     font-size: 25px;
     font-weight: 600;
@@ -137,18 +141,21 @@ a:link {
   .table {
     position: relative;
     top: 500px;
+    color: rgb(9, 8, 9);
+    width: 700px;
+    font-size: xx-large;
   }
-  .food {
+  /* .food {
   background-color: gold;
     bottom: 0px;
     border-style:solid;
     width: fit-content;
     padding: 5px;
     margin-bottom: 4px;
-    border-radius: 10px
+    border-radius: 10px */
 
-  }
-.food-list {
+  /* } */
+#food-style {
   
   font-size: xx-large;
   top:400px;
@@ -161,16 +168,18 @@ a:link {
   opacity: 85%;
 }
 
-.food-parent {
+#food-parent {
   position: relative;
-  bottom: -250px;
+  top: 300px;
+  color: rgb(16, 16, 17);
+  /* font-size: xx-large; */
+
 }
 
 #darkButton {
-  position: relative;
-  bottom: 150px;
-  right: 0px;
-  margin-top: 20px;
+  position:relative;
+  top: 15px;
+  left: 1200px;
   padding: 15px;
   border-style: groove;
   border-radius: 50%;
@@ -183,3 +192,19 @@ a:link {
   opacity: 90%;
 }
 
+#food-list {
+  position: relative;
+    font-size: x-large;
+    color: rgb(7, 7, 7);
+    background-color: rgb(157, 157, 181);
+    width:fit-content ;
+    height: 200px;
+    border-style:solid;
+    border-radius: 10px;
+    padding:30px;
+    padding-right: 130px;
+    margin-left: 10px;
+    top: 250px;
+    border-color: black;
+    opacity: 85%;
+}
